# ecommerceapi

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
ecommerceapi/: settings.py  urls.py
store/: admin.py  models.py
store/migrations/: 0001_initial.py
