[tool.poetry]
name = "ecommerceapi"
version = "0.1.0"
description = ""
authors = ["ZiadTamer77 <ziademam7798@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
psycopg = {extras = ["binary"], version = "^3.2.13"}


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
